# cerulean

./: .env.example  .gitignore  README.md  nixpacks.toml  pyproject.toml  pyrightconfig.json
src/: main.py  map.py
src/builtin/: map.py  misc.py  quote.py
src/builtin/quotes/: query.py  save.py
src/cogs/: autoresponse.py  general.py  index.py  leave.py  messages.py  minecraft.py  new_verify.py  nickname.py  on_leave.py  snowpea.py  tags.py  troll.py  verify.py
src/utils/: directory.py  ids.py  redis.py  response_database.py  tag_database.py  tag_models.py  tag_utils.py  tracker.py
src/utils/autoresponse/: database.py  models.py
src/utils/index/: models.py  utils.py
src/utils/messages/: models.py  utils.py
src/utils/responses/: database.py
src/utils/snowpea/: database.py
src/utils/tags/: database.py
src/utils/verify/: views.py
src/views/: acceptance.py  finalize.py  student_type.py
src/web/: oauth.py  server.py
