[project]
name = "cerulean"
version = "0.1.0"
license = "Apache-2.0"
description = "CMU 2029 Discord bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord-py>=2.5.2",
    "mcstatus>=12.0.1",
    "python-dotenv>=1.0.1",
    "redis>=5.2.1",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]
