[project]
name = "cerulean"
version = "0.1.0"
authors = [{ name = "Anish Pallati", email = "apallati@anish.land" }]
license = "Apache-2.0"
description = "CMU 2029 Discord bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.6.0",
    "discord-py",
    "flask>=3.1.1",
    "lxml>=5.4.0",
    "pony>=0.7.19",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "redis>=5.2.1",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "lxml-stubs>=0.5.1",
    "pony-stubs>=0.5.2",
    "ruff>=0.11.0",
]

[tool.uv.sources]
discord-py = { git = "https://github.com/Rapptz/discord.py.git", rev = "0342becc756d3e28305e26a5707b54515e06b1ee" }
